--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "validation-decorators",
   "description": "Declarative validators for javascript objects",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "files": [
     "index.js",
     "index.d.ts",
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "prepublish": "in-publish && npm run build || not-in-publish",
-    "build": "rollup -c",
+    "build": "rollup -c && npm run build:declaration",
     "build:declaration": "dts-generator --name validation-decorators --project . --out index.d.ts && npm run build:addfix ",
     "build:addfix": "echo \"declare module 'validation-decorators' {\n  export * from 'validation-decorators/index'; \n}\" >> index.d.ts"
   },
